# Hydrus-Gui

./: package.json
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: MainPage.vue
src/plugins/: vuetify.js
src/router/: index.js
