[package]
name = "hydrus-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["Deleteboys"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3.9", features = ["minwindef", "memoryapi", "consoleapi", "libloaderapi", "winnt", "wincon", "winuser", "processthreadsapi", "windef", "ntdef", "fileapi", "minwinbase", "errhandlingapi", "winbase", "handleapi", "tlhelp32"] }
widestring = "1.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
